traces/bug_68.txt
examples++-load/SortedList.h:52: error: DEAD_STORE
  The value written to &hasGrown (type _Bool) is never used.
Showing all 1 steps of the trace


examples++-load/SortedList.h:52:13: Write of unused value
50.           assert_msg(pos>=0,"Tab::Element Error : Negative index " << pos);
51.           if(pos >= cardMax){
52.               const bool hasGrown = grow(); //contents of an assertion are not executed if NDEBUG
                  ^
53.               assert_msg(hasGrown,"Tab::Element Error : Maximum array size excessed. "<< pos);
54.               return operator[](pos);}
